--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -51,11 +51,10 @@ const socialLinks = [
 
   <slot />
 
-  <p class="text-zinc-500">
+  <p class="text-zinc-400">
     Copyright © {currentYear}
     {siteConfig.name}. All rights reserved.
   </p>
 
-  <!-- <Evolution /> -->
-  <img src="/evolution.webp" class="sm:w-[30%] py-4 w-full opacity-65" />
+  <!-- <img src="/evolution.webp" class="sm:w-[35%] py-4 w-full" alt="Evolution" /> -->
 </footer>
